# tax-shield

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8d26c093010f_initial_schema.py  a1b2c3d4e5f6_add_strategy_irs_reference.py
src/tax_shield/: config.py  database.py  dependencies.py  main.py  security.py
src/tax_shield/forms/templates/: f1040.py  f1065.py  f1099.py  f1120s.py  schedule_a.py  schedule_c.py  schedule_d.py  w2.py
src/tax_shield/models/: api_models.py  db_models.py
src/tax_shield/routes/: admin.py  analysis.py  auth.py  categories.py  items.py  plaid.py  search.py  strategies.py  tax_forms.py  tax_records.py  transactions.py  user_items.py
src/tax_shield/seed_data/: categories.json  items.json  questionnaire_templates.json  strategies.json
src/tax_shield/services/: analysis_service.py  csv_import_service.py  plaid_service.py  questionnaire_service.py  search_service.py  seed_service.py  tax_form_service.py  transaction_classifier.py
static/: index.html  manifest.json  sw.js
static/css/: app.css
static/js/: api.js  app.js  auth.js  demo-data.json  demo.js
tests/: conftest.py  test_analysis.py  test_auth.py  test_items.py  test_questionnaire.py  test_search.py  test_strategies.py  test_tax_forms.py  test_transactions.py
